--- a/WGAN_PINNs_Burgers/Tutorial_WGANPINNs_BurgersEq.ipynb
+++ b/WGAN_PINNs_Burgers/Tutorial_WGANPINNs_BurgersEq.ipynb
@@ -35,22 +35,19 @@
    "metadata": {},
    "source": [
     "The Burgers equation:\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\begin{split}\n",
     "    & u_t + u u_{x} - \\nu u_{xx} = 0, \\hspace{1em} \\text{(P.D.E.)}, \\hspace{1em} (x,t) \\in [-1,1] \\times [0,1]\\\\\n",
     "    & u(x,t=0) = - \\sin(\\pi x), \\hspace{1em} \\text{(I.C.)}\\\\\n",
     "    & u(x=-1,t) = u(x=1,t)=0, \\hspace{1em} \\text{(B.C.)}\n",
     "\\end{split}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "where viscosity parameter is chosen as $\\nu = \\frac{0.01}{\\pi}$. Here we adopt a more complicated non-Gaussian and spatially dependent random initial conditions, i.e.,\n",
-    "\\begin{equation}\n",
-    "\\label{exp3_random}\n",
+    "$$\n",
     "    \\begin{split}\n",
-    "        & u(x,t=0)= \\sin (\\pi (x+\\delta_1)) + \\delta_1, \\hspace{1em} \\delta_1 = \\frac{\\epsilon_1}{\\exp(3|x|)}, \\hspace{1em} \\epsilon_1 \\sim \\mathcal{N}(0,\\sigma_1), \\hspace{1em} \\text{(I.C.)}\\\\\n",
-    "        %& u(x=-1,t) = \\delta_2, \\hspace{1em} \\delta_2=\\epsilon_2 \\cdot \\sqrt{t}, \\hspace{1em} \\epsilon_2 \\sim \\mathcal{N}(0,\\sigma_2), \\hspace{1em} \\text{(B.C.1)}\\\\\n",
-    "        %& u(x=1,t) = \\delta_3, \\hspace{1em} \\delta_3=\\epsilon_3 \\cdot \\sqrt{t}, \\hspace{1em} \\epsilon_3 \\sim \\mathcal{N}(0,\\sigma_3), \\hspace{1em} \\text{(B.C.2)}\n",
+    "        & u(x,t=0)= \\sin (\\pi (x+\\delta_1)) + \\delta_1, \\hspace{1em} \\delta_1 = \\frac{\\epsilon_1}{\\exp(3|x|)}, \\hspace{1em} \\epsilon_1 \\sim \\mathcal{N}(0,\\sigma_1), \\hspace{1em} \\text{(I.C.)}\n",
     "    \\end{split}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "with the noise level $\\sigma_1=0.1$."
    ]
   },
